--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Roderik van der Veer
-  description: Ansible role to setup postgresql
+  description: Ansible role to install and configure Postgresql on OSX. This role is part of the Superlumic project that aims to simplify repeat computer setups on OSX, 10.10 and up.
   license: MIT
   min_ansible_version: 1.2
   platforms:
@@ -11,4 +11,4 @@ galaxy_info:
   categories:
     - system
 dependencies:
-  - homebrew
+  - roderik.superlumic-homebrew
